added section on verapdf feature extraction

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -47,6 +47,10 @@ The tools in Xpdf are largely identical, but don't include *pdfseparate*, *pdfsi
 
 [Pdfcpu](https://pdfcpu.io/) is a PDF processor that is written in the *Go* language. The documentation explicity mentions its main focus is strong support for batch processing and scripting via a rich command line. It supports all PDF versions up to PDF 1.7 (ISO-32000).
 
+### Apache PDFBox
+
+[Apache PDFBox](https://pdfbox.apache.org/) is an open source Java library for working with PDF documents. It includes a set of [command-line tools](https://pdfbox.apache.org/2.0/commandline.html) for various PDF processing tasks. Binary distributions (as [JAR](https://en.wikipedia.org/wiki/JAR_(file_format)) packages) are available [here](https://pdfbox.apache.org/download.html) (you'll need the "standalone" JARs).
+
 ### QPDF
 
 [QPDF](http://qpdf.sourceforge.net/) is "a command-line program that does structural, content-preserving transformations on PDF files".
@@ -59,7 +63,7 @@ The tools in Xpdf are largely identical, but don't include *pdfseparate*, *pdfsi
 
 [Ghostscript](https://www.ghostscript.com/) is "an interpreter for the PostScript language and PDF files". It provides rendering to a variety of raster and vector formats.  
 
-The remaining sections of this post are dedicated to specific tasks. As you will see, many of these can be addressed using the multi-tools listed in this section.  
+The remaining sections of this post are dedicated to specific tasks. As you will see, many of these can be addressed using the multi-tools listed in this section.
 
 ## Validate / test integrity of PDF document
 
@@ -183,8 +187,54 @@ verapdf -f ua1 whatever.pdf > whatever-ua.xml
 
 The [documentation](https://docs.verapdf.org/cli/validation/) provides more detailed instructions on how to use VeraPDF.
 
+## Document information and metadata extraction
 
-## Metadata extraction
+A large number of tools are capable of displaying or extracting technical characteristics and various kinds of metadata, with varying degrees of detail. I'll only highlight a few here.
+
+### Pdfinfo
+
+The *pdfinfo* tool that is part of Xpdf and Poppler is useful for a quick overview of a document's general characteristics. The basic command line is:
+
+```bash
+pdfinfo whatever.pdf
+```
+
+Which gives the following result:
+
+```
+Creator:        PdfCompressor 3.1.32
+Producer:       CVISION Technologies
+CreationDate:   Thu Sep  2 07:52:56 2021 CEST
+ModDate:        Thu Sep  2 07:53:20 2021 CEST
+Tagged:         no
+UserProperties: no
+Suspects:       no
+Form:           none
+JavaScript:     no
+Pages:          1
+Encrypted:      no
+Page size:      439.2 x 637.92 pts
+Page rot:       0
+File size:      24728 bytes
+Optimized:      yes
+PDF version:    1.6
+```
+
+### VeraPDF
+
+Although primarily aimed at PDF/A validation, [VeraPDF](https://verapdf.org/) can also be used as a powerful metadata and feature extractor for any PDF file (including files that don't follow the PDF/A or PDF/UA at all!). By default, VeraPDF is configured to only extract metadata from a PDF's information dictionary, but this behaviour can be easily changed by modifying a configuration file, which is [explained in the documentation](https://docs.verapdf.org/cli/config/#features.xml). After that, you can use a command line like[^3]:
+
+```
+verapdf --off --extract whatever.pdf > whatever.xml
+```
+
+VeraPDF can also be used to recursively process all files with a .pdf extension in a directory tree, using the following command-line (here, *myDir* is the root of the directory tree):
+
+```
+verapdf --recurse --off --extract myDir > whatever.xml
+```
+
+The [VeraPDF documentation](https://docs.verapdf.org/cli/feature-extraction/) discusses the feature extraction functionality in more detail.
 
 ## Compare two PDFs
 
@@ -218,24 +268,6 @@ Ghostscript, Poppler:
 <https://superuser.com/questions/278562/how-can-i-fix-repair-a-corrupted-pdf-file>
 
 
-## Extract features
-
-<https://gist.github.com/bitsgalore/9eac23e44d6d99b3caa6#useful-verapdf-command-lines>
-
-
-Disable PDF/A validation, only extract features:
-
-```
-verapdf --off --extract whatever.pdf > whatever.xml
-```
-
-Recursively process directory tree:
-
-```
-verapdf --recurse --off --extract myDir > whatever.xml
-```
-
-<https://docs.verapdf.org/cli/feature-extraction/>
 
 ## Extract internal PDF objects
 
@@ -245,6 +277,30 @@ verapdf --recurse --off --extract myDir > whatever.xml
 
 <https://pypi.org/project/pdfminer/>
 
+### PDFBox
+
+Example command (you may need to adapt the path to the JAR file and its name according to the location and version on your system):
+
+```bash
+java -jar ~/pdfbox/pdfbox-app-2.0.24.jar ExtractText whatever.pdf whatever.txt
+```
+
+## Extract images
+
+<!--
+### PDFBox
+
+```bash
+java -jar ~/pdfbox/pdfbox-app-2.0.24.jar ExtractImages whatever.pdf
+```
+
+This gave me the following error for a PDF with an embedded JPEG 2000 image:
+
+```
+SEVERE: Cannot read JPEG2000 image: Java Advanced Imaging (JAI) Image I/O Tools are not installed
+```
+
+-->
 ## Extract URLs
 
 ## Check PDF document for broken links with pdfcpu
@@ -310,3 +366,5 @@ page   num  type   width height color comp bpc  enc interp  object ID x-ppi y-pp
 [^1]: Command line: `pdfinfo whatever.pdf`
 
 [^2]: In this example output is redirected to a file; this is generally a good idea because of the amount of XML output generated by VeraPDF.
+
+[^3]: The `--off` switch disables PDF/A validation. Output is redirected to a file (recommended because, depending on the configuration used, VeraPDF can generate a *lot* of output).
