--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -18,7 +18,7 @@ This post is first attempt at this. For now it is largely based on a number of u
 
 ## Caveats
 
-I would like to stress that the selection of tasks and tools presented here is by no means meant to be exhaustive, as it is guided to a great degree by the PDF-related issues I've encountered myself in my day to day work. Some of these tasks could be done using other tools (including ones that are not mentioned here), and in some cases these other tools may well be better choices! So there's probably a fair amount of selection bias here, and I don't want to make any claims of presenting the "best" way to do any of these tasks here.
+I would like to stress that the selection of tasks and tools presented here is by no means meant to be exhaustive, as it is guided to a great degree by the PDF-related issues I've encountered myself in my day to day work. Some of these tasks could be done using other tools (including ones that are not mentioned here), and in some cases these other tools may well be better choices! So there's probably a fair amount of selection bias here, and I don't want to make any claims of presenting the "best" way to do any of these tasks here. Also, many of the example commands in this post can be further refined to particular needs (e.g. using additional options or alternative output formats), and they should probably best seen as (hopefully useful) starting points for the reader's own explorations.
 
 ## PDF multi-tools
 
