made headings more descriptive

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -69,7 +69,7 @@ The remaining sections of this post are dedicated to specific tasks. As you will
 
 PDFs that are damaged, structurally flawed or otherwise not conformant to the PDF format specification can result in a multitude of problems. A number of tools provide error checking and integrity testing functionality. This can range from limited structure checks, to full (claimed) validation against the filespec. It's important to note that none of the tools mentioned here are perfect, and some faults that are picked up by one tool may be completely ignored by another one and vice versa. So it's often a good idea to try multiple tools.
 
-### Pdfcpu
+### Validate with Pdfcpu
 
 The Pdfcpu command-line tool has a [`validate` command](https://pdfcpu.io/core/validate) that checks a file's compliance against [PDF 32000-1:2008](https://www.adobe.com/content/dam/acom/en/devnet/pdf/pdfs/PDF32000_2008.pdf) (i.e. the ISO version of PDF 1.7). It provides both a "strict" and a "relexed" validation mode, where the "relaxed" mode (which is the default!) ignores some common violations of the PDF specification. The command-line is:
 
@@ -83,7 +83,7 @@ The "strict" mode can be activated with the `-m` option:
 pdfcpu validate -m strict whatever.pdf
 ```
 
-### JHOVE
+### Validate with JHOVE
 
 [JHOVE](http://jhove.openpreservation.org/) is a is a file format identification, validation and characterisation tool that includes a module for PDF validation. It is widely used in the digital heritage (libraries, archives) sector. Here's a typical command-line example (note that you explicitly need to invoke the *PDF-hul* module via the `-m` option; omitting this can give unexpected results):
 
@@ -93,7 +93,7 @@ jhove -m PDF-hul -i whatever.pdf
 
 Check out the [documentation](https://jhove.openpreservation.org/modules/pdf/) for more information about JHOVE's PDF module, and its limitations.
 
-### QPDF 
+### Check integrity with QPDF 
 
 The `--check` option of QPDF (see above) performs checks on a PDF's overall file structure. QPDF does not provide full-fledged validation, and the [documentation](http://qpdf.sourceforge.net/files/qpdf-manual.html) states that:
 
@@ -105,7 +105,7 @@ Nevertheless, QPDF is still useful for detecting various issues, especially in c
 qpdf --check --verbose whatever.pdf
 ```
 
-### Ghostscript
+### Render with Ghostscript
 
 Another useful technique is to process a PDF with Ghostscript (rendering the result to a "nullpage" device). For example: 
 
@@ -133,7 +133,7 @@ In case of any problems with the input file, Ghostscript will report quite detai
    **** specification.
 ```
 
-### Mutool
+### Mutool info command
 
 Running Mutool (part of MuPDF, see above) with the `info` command returns information about internal pdf resources. In case of broken or malformed files the output includes error messages, which can be quite informative. Here's an example command-line:
 
@@ -151,7 +151,7 @@ mutool info whatever.pdf
 
 [PDF/A](https://en.wikipedia.org/wiki/PDF/A) comprises a set of ISO-standardized profiles that are aimed at long-term preservation. [PDF/UA](https://en.wikipedia.org/wiki/PDF/UA) is another ISO-standardized profile that ensures accessibility for people with disabilities. These are not separate file formats, but rather profiles within ISO 32000 that put some constraints on PDF's full set of features.
 
-### VeraPDF
+### Validate with VeraPDF
 
 [VeraPDF](https://verapdf.org/) was originally developed as an open source PDF/A validator that  covers all parts of the PDF/A standards. Starting with version 1.18, it also added support for PDF/UA. The following command lists al available validation profiles:
 
@@ -191,7 +191,7 @@ The [documentation](https://docs.verapdf.org/cli/validation/) provides more deta
 
 A large number of tools are capable of displaying or extracting technical characteristics and various kinds of metadata, with varying degrees of detail. I'll only highlight a few here.
 
-### Pdfinfo
+### Extract general characteristics with Pdfinfo
 
 The *pdfinfo* tool that is part of Xpdf and Poppler is useful for a quick overview of a document's general characteristics. The basic command line is:
 
@@ -220,7 +220,7 @@ Optimized:      yes
 PDF version:    1.6
 ```
 
-### VeraPDF
+### Elaborate feature extraction with VeraPDF
 
 Although primarily aimed at PDF/A validation, [VeraPDF](https://verapdf.org/) can also be used as a powerful metadata and feature extractor for any PDF file (including files that don't follow the PDF/A or PDF/UA at all!). By default, VeraPDF is configured to only extract metadata from a PDF's information dictionary, but this behaviour can be easily changed by modifying a configuration file, which is [explained in the documentation](https://docs.verapdf.org/cli/config/#features.xml). After that, you can use a command line like[^3]:
 
@@ -236,13 +236,25 @@ verapdf --recurse --off --extract myDir > whatever.xml
 
 The [VeraPDF documentation](https://docs.verapdf.org/cli/feature-extraction/) discusses the feature extraction functionality in more detail.
 
+## Extract text
+
+<https://pypi.org/project/pdfminer/>
+
+### Extract text with PDFBox
+
+Example command (you may need to adapt the path to the JAR file and its name according to the location and version on your system):
+
+```bash
+java -jar ~/pdfbox/pdfbox-app-2.0.24.jar ExtractText whatever.pdf whatever.txt
+```
+
 ## Compare two PDFs
 
 Sometimes it's useful to be able to check if two PDF documents contain the same text, or if they have the same visual appearance.
 
 ### Comparepdf 
 
-The [Comparepdf](http://www.qtrac.eu/)[^4] tool can compare PDFs, based on either text or visual appearance. By default it uses the program exit code to store the result of the comparison. The tool's command-line help text explains the possible outcomes:
+The [Comparepdf](http://www.qtrac.eu/)[^4] tool compares PDFs, based on either text or visual appearance. By default it uses the program exit code to store the result of the comparison. The tool's command-line help text explains the possible outcomes:
 
 > A return value of 0 means no differences detected; 1 or 2 signifies an error; 10 means they differ visually, 13 means they differ textually, and 15 means they have different page counts
 
@@ -274,17 +286,7 @@ Ghostscript, Poppler:
 
 <https://gist.github.com/bitsgalore/0ae15a7c964b04671828891abfc41b37>
 
-## Extract text
 
-<https://pypi.org/project/pdfminer/>
-
-### PDFBox
-
-Example command (you may need to adapt the path to the JAR file and its name according to the location and version on your system):
-
-```bash
-java -jar ~/pdfbox/pdfbox-app-2.0.24.jar ExtractText whatever.pdf whatever.txt
-```
 
 ## Extract images
 
@@ -356,6 +358,8 @@ page   num  type   width height color comp bpc  enc interp  object ID x-ppi y-pp
 
    2     7 image     681   511  cmyk    4   8  image  no        20  0   218   218  912K  67%
 ```
+
+## Reduce size of large PDF with hi-res graphics
 
 ## Further resources
 
