made headings more descriptive

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -105,7 +105,7 @@ Nevertheless, QPDF is still useful for detecting various issues, especially in c
 qpdf --check --verbose whatever.pdf
 ```
 
-### Render with Ghostscript
+### Check for Ghostscript rendering errors
 
 Another useful technique is to process a PDF with Ghostscript (rendering the result to a "nullpage" device). For example: 
 
@@ -133,7 +133,7 @@ In case of any problems with the input file, Ghostscript will report quite detai
    **** specification.
 ```
 
-### Mutool info command
+### Check for errors with Mutool info command
 
 Running Mutool (part of MuPDF, see above) with the `info` command returns information about internal pdf resources. In case of broken or malformed files the output includes error messages, which can be quite informative. Here's an example command-line:
 
