made headings more descriptive

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -151,7 +151,7 @@ mutool info whatever.pdf
 
 [PDF/A](https://en.wikipedia.org/wiki/PDF/A) comprises a set of ISO-standardized profiles that are aimed at long-term preservation. [PDF/UA](https://en.wikipedia.org/wiki/PDF/UA) is another ISO-standardized profile that ensures accessibility for people with disabilities. These are not separate file formats, but rather profiles within ISO 32000 that put some constraints on PDF's full set of features.
 
-### Validate with VeraPDF
+### Validate PDF/A or PDF/UA with VeraPDF
 
 [VeraPDF](https://verapdf.org/) was originally developed as an open source PDF/A validator that  covers all parts of the PDF/A standards. Starting with version 1.18, it also added support for PDF/UA. The following command lists al available validation profiles:
 
