added pba section start

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -236,6 +236,12 @@ verapdf --recurse --off --extract myDir > whatever.xml
 
 The [VeraPDF documentation](https://docs.verapdf.org/cli/feature-extraction/) discusses the feature extraction functionality in more detail.
 
+## Policy-based assessment
+
+The results of the feature extraction exercise described in the previous section can also be used as input for policy-based assessments. For instance, archival institutions may have policies that 
+
+VeraPDF, see [Policy-based assessment with VeraPDF - a first impression]({{ BASE_PATH }}/2017/06/01/policy-based-assessment-with-verapdf-a-first-impression)
+
 ## Extract text
 
 <https://pypi.org/project/pdfminer/>
@@ -319,10 +325,6 @@ SEVERE: Cannot read JPEG2000 image: Java Advanced Imaging (JAI) Image I/O Tools 
 
 pdftocairo (Poppler)?
 
-
-## Policy-based assessment
-
-VeraPDF, see [Policy-based assessment with VeraPDF - a first impression]({{ BASE_PATH }}/2017/06/01/policy-based-assessment-with-verapdf-a-first-impression)
 
 ## Repair corrupted PDF
 
