completed pba section

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -236,11 +236,53 @@ verapdf --recurse --off --extract myDir > whatever.xml
 
 The [VeraPDF documentation](https://docs.verapdf.org/cli/feature-extraction/) discusses the feature extraction functionality in more detail.
 
-## Policy-based assessment
+## Assess compliance with user-defined policy or profile
 
-The results of the feature extraction exercise described in the previous section can also be used as input for policy-based assessments. For instance, archival institutions may have policies that 
+The results of the feature extraction exercise described in the previous section can also be used as input for policy-based assessments. For instance, archival institutions may have policies that prohibit e.g. PDFs with encryption or fonts that are not embedded.
 
-VeraPDF, see [Policy-based assessment with VeraPDF - a first impression]({{ BASE_PATH }}/2017/06/01/policy-based-assessment-with-verapdf-a-first-impression)
+### VeraPDF policy assessment
+
+Automated assessment of PDFs against such policies can also be done with VeraPDF. This requires that the rules that make up the policy are expressed as a machine-readable [Schematron](https://en.wikipedia.org/wiki/Schematron) file. As an example, the Schematron file below is made up of two rules that each prohibit specific encryption-related features:
+
+```xml
+<?xml version="1.0"?>
+
+<sch:schema xmlns:sch="http://purl.oclc.org/dsdl/schematron" queryBinding="xslt">
+    <sch:pattern name="Disallow encrypt in trailer dictionary">
+        <sch:rule context="/report/jobs/job/featuresReport/documentSecurity">
+            <sch:assert test="not(encryptMetadata = 'true')">Encrypt in trailer dictionary</sch:assert>
+        </sch:rule>
+    </sch:pattern>    
+    
+    <sch:pattern name="Disallow other forms of encryption (e.g. open password)">
+        <sch:rule context="/report/jobs/job/taskResult/exceptionMessage">
+            <sch:assert test="not(contains(.,'encrypted'))">Encrypted document</sch:assert>
+        </sch:rule>
+    </sch:pattern>
+    
+</sch:schema>
+```
+
+A PDF can subsequently be tested against these rules (here in the file "policy.sch") using the following basic command-line:
+
+```bash
+verapdf --extract --policyfile policy.sch whatever.pdf > whatever.xml
+```
+
+The outcome of the policy-based assessment can be found in the output file's *policyReport* element. In the example below, the PDF did not meet one of the rules:
+
+```xml
+<policyReport passedChecks="0" failedChecks="1" xmlns:vera="http://www.verapdf.org/MachineReadableReport">
+    <passedChecks/>
+    <failedChecks>
+        <check status="failed" test="not(encryptMetadata = 'true')" location="/report/jobs/job/featuresReport/documentSecurity">
+            <message>Encrypt in trailer dictionary</message>
+        </check>
+    </failedChecks>
+</policyReport>
+```
+
+More examples can be found in my 2017 post [Policy-based assessment with VeraPDF - a first impression]({{ BASE_PATH }}/2017/06/01/policy-based-assessment-with-verapdf-a-first-impression).
 
 ## Extract text
 
@@ -366,8 +408,8 @@ page   num  type   width height color comp bpc  enc interp  object ID x-ppi y-pp
 ## Further resources
 
 - [Moritz Mähr, "Working with batches of PDF files," The Programming Historian 9 (2020)](https://doi.org/10.46430/phen0088)
-
 - [PDF tools in Community Owned Digital Preservation Tool Registry (COPTR)](https://coptr.digipres.org/index.php/PDF)
+- [Policy-based assessment with VeraPDF - a first impression]({{ BASE_PATH }}/2017/06/01/policy-based-assessment-with-verapdf-a-first-impression)
 
 
 [^1]: Command line: `pdfinfo whatever.pdf`
