--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -309,7 +309,7 @@ The [Comparepdf](http://www.qtrac.eu/)[^4] tool compares PDFs, based on either t
 For clarity I used the `-v` switch in the examples below, which activates verbose output. To test if two PDFs contain the same text, use:
 
 ```bash
-comparepdf ct -v=2 whatever.pdf wherever.pdf
+comparepdf -ct -v=2 whatever.pdf wherever.pdf
 ```
 
 If al goes well the output is either "No differences detected" or "Files have different texts".
