--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -10,15 +10,15 @@ comment_id: 76
   <figcaption><a href="https://www.flickr.com/photos/130648318@N06/42662053232">Plumbers Tool Box</a> by <a href="https://www.flickr.com/photos/130648318@N06/">pszz</a> on Flickr. Used under <a href="https://creativecommons.org/licenses/by-nc-sa/2.0/">CC BY-NC-SA 2.0</a>.</figcaption>
 </figure>
 
-Problems with PDF files are a recurring theme in my daily work. Over the years, I've been using a variety of open-source software tools for solving such problems. These include tools for validation and error-checking, the extraction of (technical) features and metadata, text and image extraction, to name but a few. Many of these are tools that I only use occasionally, so I often find myself forgetting how to use them (if I even remember what tool to use at all!). So, I thought it would be useful to document my go-to PDF tools and commands for a variety of common tasks in one single place, similar to [my 2015 post on preserving optical media from the command-line]({{ BASE_PATH }}/2015/11/13/preserving-optical-media-from-the-command-line).
+Problems with PDF files are a recurring theme in my daily work. Over the years, I've been using a variety of open-source software tools for solving such problems. These include tools for validation and error-checking, the extraction of (technical) features and metadata, and text and image extraction, to name but a few. Many of these are tools that I only use occasionally, and I constantly forget how to use them (if I even remember what tool to use at all), even though I've made several lists, cheat-sheets and working notes (but I end up forgetting about those as well!). To fix this situation once and for all, this post brings together my go-to PDF tools and commands for a variety of common tasks in one single place, largely based on my scattered old notes. This is similar to [my 2015 post on preserving optical media from the command-line]({{ BASE_PATH }}/2015/11/13/preserving-optical-media-from-the-command-line).
 
-This post is first attempt at this. For now it is largely based on a number of unpublished lists, cheat-sheets and working notes that I compiled earlier. I expect this will be very much a "living" document, and that I will add more content over time. All of the tools presented here are published as open-source, and most of them have a command-line interface.
+All of the tools presented here are published as open-source, and most of them have a command-line interface. They all work under Linux (which is the main OS I'm using these days), but most of them are available for other platforms (including Windows) as well.
 
 <!-- more -->
 
 ## Disclaimer
 
-I would like to stress that the selection of tasks and tools presented here is by no means meant to be exhaustive, as it is guided to a great degree by the PDF-related issues I've encountered myself in my day to day work. Some of these tasks could be done using other tools (including ones that are not mentioned here), and in some cases these other tools may well be better choices! So there's probably a fair amount of selection bias here, and I don't want to make any claims of presenting the "best" way to do any of these tasks here. Also, many of the example commands in this post can be further refined to particular needs (e.g. using additional options or alternative output formats), and they should probably best seen as (hopefully useful) starting points for the reader's own explorations.
+I would like to stress that the selection of tasks and tools presented here is by no means meant to be exhaustive, as it is guided to a great degree by the PDF-related issues I've encountered myself in my day to day work. Some of these tasks could be done using other tools (including ones that are not mentioned here), and in some cases these other tools may well be better choices! So there's probably a fair amount of selection bias here, and I don't want to make any claims of presenting the "best" way to do any of these tasks here. Also, many of the example commands in this post can be further refined to particular needs (e.g. using additional options or alternative output formats), and they should probably best seen as (hopefully useful) starting points for the reader's own explorations. My intention is that this post will be very much a "living" document, and that more <strike>PDF madness</strike> content will be added over time.
 
 ## PDF multi-tools
 
