added text extraction

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -22,7 +22,7 @@ I would like to stress that the selection of tasks and tools presented here is b
 
 ## PDF multi-tools
 
-Before diving into any specific tasks, I'll start this post by listing a number of general-purpose PDF tools and toolkits. Each of these are capable of a wide range of tasks (including some that I won't explicitly address in this post), and they can be seen as "Swiss army-knives" of PDF processing. Whenever I need to get some PDF processing or analysis done and I'm not sure what tool to use, these are usually my starting point. In the majority of cases, at least one of them turns out to have the functionality I'm looking for, so it's a good idea to check them out if you're not familiar with them already.
+Before diving into any specific tasks, let's start with some general-purpose PDF tools and toolkits. Each of these are capable of a wide range of tasks (including some I won't explicitly address here), and they can be seen as "Swiss army-knives" of PDF processing. Whenever I need to get some PDF processing or analysis done and I'm not sure what tool to use, these are usually my starting points. In the majority of cases, at least one of them turns out to have the functionality I'm looking for, so it's a good idea to check them out if you're not familiar with them already.
 
 ### Xpdf/Poppler
 
@@ -191,7 +191,7 @@ The [documentation](https://docs.verapdf.org/cli/validation/) provides more deta
 
 A large number of tools are capable of displaying or extracting technical characteristics and various kinds of metadata, with varying degrees of detail. I'll only highlight a few here.
 
-### Extract general characteristics with Pdfinfo
+### Extract general characteristics with pdfinfo
 
 The *pdfinfo* tool that is part of Xpdf and Poppler is useful for a quick overview of a document's general characteristics. The basic command line is:
 
@@ -286,15 +286,37 @@ More examples can be found in my 2017 post [Policy-based assessment with VeraPDF
 
 ## Extract text
 
-<https://pypi.org/project/pdfminer/>
+Text extraction from PDF documents is notoriously hard. [This post]](https://filingdb.com/b/pdf-text-extraction) gives a good overview of the main pitfalls. With that said, quite a few tools are available for this, and below I list a few that are useful starting points.
+
+### Extract text with pdftotext
+
+The *pdftotext* tool that is part of Poppler and Xpdf is a good starting point. The basic command-line is:
+
+```bash
+pdftotext whatever.pdf whatever.txt
+```
+
+The tool has lots of options to fine-tune the default behaviour, so make sure to check those out if you're looking for. Note that the available options vary somewhat between the Poppler and Xpdf versions. The [documentation of the Poppler version is available here](https://manpages.debian.org/stretch/poppler-utils/pdftotext.1.en.html), and [here is the Xpdf version](https://www.xpdfreader.com/pdftotext-man.html).
 
 ### Extract text with PDFBox
 
-Example command (you may need to adapt the path to the JAR file and its name according to the location and version on your system):
+PDFBox is also a good choice for text extraction. Here's an example command (you may need to adapt the path to the JAR file and its name according to the location and version on your system):
 
 ```bash
 java -jar ~/pdfbox/pdfbox-app-2.0.24.jar ExtractText whatever.pdf whatever.txt
 ```
+
+PDFBox also provides various options, which are [documented here](https://pdfbox.apache.org/1.8/commandline.html#extracttext).
+
+### Extract text with Apache Tika
+
+[Apache Tika](https://tika.apache.org/) is a Java library that supports metadata and content (including text) extraction for a wide variety of file formats. For PDF it uses the PDF parser of PDFBox (see previous section). Tika is particularly interesting for situations where text extraction from multiple input formats is needed. For command-line use, download the *Tika-app* runnable JAR from [here](https://tika.apache.org/download.html). By default, Tika will extract both text and metadata, and report both in XHTML format. You can change this behaviour with the `--text` option (as with PDFBox, you may need to adapt the path and name of the JAR file):
+
+```bash
+java -jar ~/tika/tika-app-2.1.0.jar --text whatever.pdf > whatever.txt
+```
+
+An explanation of all available options is [available here](https://tika.apache.org/1.17/gettingstarted.html) (section "Using Tika as a command line utility").
 
 ## Compare two PDFs
 
@@ -410,7 +432,7 @@ page   num  type   width height color comp bpc  enc interp  object ID x-ppi y-pp
 - [Moritz Mähr, "Working with batches of PDF files," The Programming Historian 9 (2020)](https://doi.org/10.46430/phen0088)
 - [PDF tools in Community Owned Digital Preservation Tool Registry (COPTR)](https://coptr.digipres.org/index.php/PDF)
 - [Policy-based assessment with VeraPDF - a first impression]({{ BASE_PATH }}/2017/06/01/policy-based-assessment-with-verapdf-a-first-impression)
-
+- [What's so hard about PDF text extraction? ​](https://filingdb.com/b/pdf-text-extraction)
 
 [^1]: Command line: `pdfinfo whatever.pdf`
 
