--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -318,6 +318,86 @@ java -jar ~/tika/tika-app-2.1.0.jar --text whatever.pdf > whatever.txt
 
 An explanation of all available options is [available here](https://tika.apache.org/1.17/gettingstarted.html) (section "Using Tika as a command line utility").
 
+## Extract URLs
+
+When extracting URLs, it's important to make a distinction between the following two cases:
+
+1. URLs that are encoded as a "link annotation", which is a data structure in PDF that results in a clickable link
+2. Non-clickable URLs that are just part of the body text.
+
+The automated extraction of the first case is straightforward, while the second case depends on some kind of lexical analysis of the body text (typically based on regular expressions). For most practical applications the extraction of both types is desired.
+
+
+### Extract URLs with pdfx
+
+The [pdfx](https://www.metachris.com/pdfx/) tool is designed to detect and extract external references, including URLs. Its URL detection uses lexical analysis, and is based on [RegEx patterns written by John Gruber](https://gist.github.com/gruber/8891611). The basic command line for URL extraction is:
+
+```bash
+pdfx -v whatever.pdf > whatever.txt
+```
+
+I did some limited testing with this tool in 2016. One issue I ran into is that pdfx [truncates URLS that span more than one line](https://github.com/metachris/pdfx/issues/21). As of 2021, this issue hasn't been fixed so far, which seriously limits the usefulness of this (otherwise very interesting) tool.
+
+## Check PDF document for broken links with pdfcpu
+
+<https://gist.github.com/bitsgalore/9eac23e44d6d99b3caa6#check-pdf-document-for-broken-links-with-pdfcpu>
+
+
+## Extract images
+
+PDFs often contain embedded images, which can be extracted in various ways. 
+
+### Extract images with pdfimages
+
+The *pdfimages* tool of Xpdf/Poppler is probably the most straightforward image extraction tool. At minimum, it takes as its arguments the name of the input PDF document, and the "image-root" which is actually just a text prefix that is used to generate the name of the output images. By default it writes its output to one of the [Netpbm](https://en.wikipedia.org/wiki/Netpbm) file formats, but for convenience you might want to use the `-png` option, which uses the PNG format instead:
+
+```bash
+pdfimages -png whatever.pdf whatever
+```
+
+Output images are now written as "whatever-000.png", "whatever-001.png", "whatever-002.png", and so on. The `-j`, `-jp2`, `-jbig2` and `-ccitt` switches can be used to store JPEG, JPEG2000, JBIG2 and CCITT images in their native formats, respectively (or use `-all`, which combines all of these options). 
+
+<!--
+### PDFBox
+
+```bash
+java -jar ~/pdfbox/pdfbox-app-2.0.24.jar ExtractImages whatever.pdf
+```
+
+This gave me the following error for a PDF with an embedded JPEG 2000 image:
+
+```
+SEVERE: Cannot read JPEG2000 image: Java Advanced Imaging (JAI) Image I/O Tools are not installed
+```
+
+-->
+
+## Show information about embedded images
+
+### List images with  with pdfimages
+
+The aforementioned *pdfimages* tool is also useful for getting an overview of all embedded images in a PDF, and their main characteristics (width, height, colour, encoding, resolution and size). just user the `-list` option as shown below:  
+
+```bash
+pdfimages -list whatever.pdf
+```
+
+This results in a nice table like this:
+
+```
+page   num  type   width height color comp bpc  enc interp
+-----------------------------------------------------------
+   1     0 image    1830  2658  gray    1   1  jbig2  no
+   1     1 image     600   773  gray    1   8  jpx    no
+
+
+
+page   object ID x-ppi y-ppi size ratio
+----------------------------------------
+   1       16  0   301   301   99B 0.0%
+   1       17  0   300   300 17.9K 4.0%
+```
+
 ## Compare two PDFs
 
 Sometimes it's useful to be able to check if two PDF documents contain the same text, or if they have the same visual appearance.
@@ -358,27 +438,6 @@ Ghostscript, Poppler:
 
 
 
-## Extract images
-
-<!--
-### PDFBox
-
-```bash
-java -jar ~/pdfbox/pdfbox-app-2.0.24.jar ExtractImages whatever.pdf
-```
-
-This gave me the following error for a PDF with an embedded JPEG 2000 image:
-
-```
-SEVERE: Cannot read JPEG2000 image: Java Advanced Imaging (JAI) Image I/O Tools are not installed
-```
-
--->
-## Extract URLs
-
-## Check PDF document for broken links with pdfcpu
-
-<https://gist.github.com/bitsgalore/9eac23e44d6d99b3caa6#check-pdf-document-for-broken-links-with-pdfcpu>
 
 
 ## Extract references and metadata from PDF documents, and download all referenced PDFs
@@ -395,35 +454,6 @@ pdftocairo (Poppler)?
 <https://superuser.com/questions/278562/how-can-i-fix-repair-a-corrupted-pdf-file>
 
 
-## Info about images (incl resolution)
-
-```bash
-pdfimages -list whatever.pdf
-```
-
-Result:
-
-```
-page   num  type   width height color comp bpc  enc interp  object ID x-ppi y-ppi size ratio
-
---------------------------------------------------------------------------------------------
-
-   1     0 image    1000   544  cmyk    4   8  image  no         4  0   212   212 1184K  56%
-
-   1     1 image    1000   704  cmyk    4   8  image  no         6  0   201   201 1280K  47%
-
-   1     2 image     960  1280  cmyk    4   8  image  no         8  0   217   217 2251K  47%
-
-   1     3 image    4320  3240  cmyk    4   8  image  no        10  0   567   567 22.6M  42%
-
-   2     4 image    1024   683  cmyk    4   8  image  no        14  0   211   211 1275K  47%
-
-   2     5 image    2048  1536  cmyk    4   8  image  no        16  0   266   266 7671K  62%
-
-   2     6 image     960  1280  cmyk    4   8  image  no        18  0   245   245 2655K  55%
-
-   2     7 image     681   511  cmyk    4   8  image  no        20  0   218   218  912K  67%
-```
 
 ## Reduce size of large PDF with hi-res graphics
 
