added more url xtraction

--- a/_drafts/2021-08-31-pdf-tools.md
+++ b/_drafts/2021-08-31-pdf-tools.md
@@ -327,7 +327,6 @@ When extracting URLs, it's important to make a distinction between the following
 
 The automated extraction of the first case is straightforward, while the second case depends on some kind of lexical analysis of the body text (typically based on regular expressions). For most practical applications the extraction of both types is desired.
 
-
 ### Extract URLs with pdfx
 
 The [pdfx](https://www.metachris.com/pdfx/) tool is designed to detect and extract external references, including URLs. Its URL detection uses lexical analysis, and is based on [RegEx patterns written by John Gruber](https://gist.github.com/gruber/8891611). The basic command line for URL extraction is:
@@ -337,6 +336,13 @@ pdfx -v whatever.pdf > whatever.txt
 ```
 
 I did some limited testing with this tool in 2016. One issue I ran into is that pdfx [truncates URLS that span more than one line](https://github.com/metachris/pdfx/issues/21). As of 2021, this issue hasn't been fixed so far, which seriously limits the usefulness of this (otherwise very interesting) tool.
+
+### Other URL extraction tools
+
+- Some years ago Ross Spencer wrote [a link extraction tool that uses Apache Tika](https://github.com/httpreserve/tikalinkextract). There's more info in [this blog post](https://openpreservation.org/blogs/hyperlinks-in-your-files-how-to-get-them-out-using-tikalinkextract/). I'm not sure if this tool is still maintained.
+
+- Around the same time I wrote [this simple extraction script](https://gist.github.com/bitsgalore/aab680a9bccfc5496948b776ee06397c) that wraps around Apache Tika and the [xurl](https://github.com/mvdan/xurls) tool. I used this to extract URLs from MS Word documents, but this should probably work for PDF too (I haven't tested this though!).
+
 
 ## Check PDF document for broken links with pdfcpu
 
